Changes with Apache 1.3.15

  *) mod_status now respects ?refresh=n of 1 or greater.  If the given
     refresh value is not a number, ?refresh is set to 1 second.
     [William Rowe, Dirk Ahlers <there@darkride.net> PR5067]

  *) While Windows 95 and 98 may still run Apache as a 'service' in a 
     hidden window, the Apache Win9x service now dies when the user 
     logs off.  No immediate or obvious solution available, but this
     was a side effect of restoring 16-bit CGI processes, of which the
     command.com is one.  This benefits far outweighs this unfortunate
     side effect.  [William Rowe]

  *) Restore child process consoles to correct 16-bit CGI execution
     on Windows.  Relies on Win9xConHook.dll for Win9x.  This patch
     also assures the Apache window remains titled 'Apache', rather
     than flickering to the cgi app titles.  [William Rowe]

  *) Added Win9xConHook.dll, which uses hidden console spy windows to 
     handle the shutdown, logoff and Close button events, and dispatch
     them to Apache just as SetConsoleCtrlHandler does on Win NT/2K.
     The close button on Win9x now works, and the Win9x service support
     code moved into this module.  [William Rowe]

  *) Fix messages from the -k start/stop/restart command options on
     Windows.  [William Rowe]

  *) Allow Win32 users to build mod_isapi, regardless of the age of
     their Win32 SDK headers.  Warning provided if features must be
     disabled due to old headers.  [William Rowe]

  *) The ScriptInterpreterSource Registry source will now handle any
     post-scriptname arguments (e.g. cmd script -q), substitute any
     environment variables (e.g. "%windir%\sysapp.exe") and use the
     short or long path name as appropriate (e.g. "doit %1" uses the
     short form, no spaces, while "doit "%1"" uses the long form of
     the script name, in quotes.)  Also, passes all script names in
     backslash delimited format (instead of slashes).  [William Rowe]
