@@ -1,5 +1,9 @@
 Changes with Apache 1.3.15
 
+  *) mod_cgi on Win32 and Netware now does a more effective job of
+     capturing all stderr output from user's scripts.  PR6161
+     [Hardy Braunsdorf <hardy.braunsdorf@metechnology.com>, Will Rowe]
+
   *) mod_status now respects ?refresh=n of 1 or greater.  If the given
      refresh value is not a number, ?refresh is set to 1 second.
      [William Rowe, Dirk Ahlers <there@darkride.net> PR5067]
